# python-grammar

./: Makefile  README.md  hatch_build.py  pyproject.toml  python.gram  test1.py  test2.py  test3.py  tox.ini
src/pegen/generate/: main.py
