[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-pegen-parser"
version = "0.0.1"
description = "A drop in replacement for ast.parse()"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pegen>=0.3.0",
]

[tool.isort]
profile = "black"

[tool.hatch.build.hooks.custom]
path="hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pegen"]
